--- a/src/pages/Intro/Intro.css
+++ b/src/pages/Intro/Intro.css
@@ -126,7 +126,7 @@
   background-color: white;
   transition: 0.3s;
 }
-.curriculo {
+.resume {
   background-color: var(--primary);
   color: white;
 }
@@ -137,7 +137,7 @@
   box-shadow: 4px 4px 0 0 var(--text-1);
   transform: translate3d(-4px, -4px, 0);
 }
-.curriculo:hover {
+.resume:hover {
   color: white;
   border: 2px solid var(--primary);
   background-color: var(--secondary);
