--- a/src/pages/Intro/Intro.css
+++ b/src/pages/Intro/Intro.css
@@ -125,6 +125,7 @@
   border-radius: 10px;
   background-color: white;
   transition: 0.3s;
+  cursor: pointer;
 }
 .resume {
   background-color: var(--primary);
